# kuroya

./: .gitignore  .ignore  Cargo.toml  README.md
crates/kuroya-app/: Cargo.toml  build.rs
crates/kuroya-app/src/: app_exit_guard_dialogs.rs  app_frame_scheduler.rs  app_session.rs  app_session_restore.rs  app_startup.rs  app_startup_context.rs  app_startup_state.rs  app_state.rs  app_tabs.rs  app_update.rs  app_update_overlays.rs  buffer_close_guard_dialog.rs  buffer_close_lifecycle.rs  buffer_find.rs  buffer_find_history.rs  buffer_find_panel.rs  buffer_lifecycle.rs  buffer_reload_guard_dialog.rs  command_aliases.rs  command_bus_runtime.rs  command_catalog.rs  command_editor_runtime.rs  command_palette_items.rs  command_palette_overlay.rs  command_runtime.rs  command_ui_runtime.rs  commands.rs  completion_preview.rs  dashboard.rs  devtools.rs  devtools_async_tasks.rs  devtools_lsp_trace.rs  devtools_memory.rs  devtools_profile.rs  devtools_repaint_diagnostics.rs  devtools_startup.rs  devtools_trace_id.rs  diagnostic_location.rs  diagnostic_navigation.rs  diagnostics_panel.rs  (+209 more)
crates/kuroya-app/src/app_exit_guard_dialogs/: confirm.rs  saving.rs
crates/kuroya-app/src/app_session_restore/: panes.rs  tests.rs
crates/kuroya-app/src/app_tabs/: tests.rs
crates/kuroya-app/src/app_update/: panels.rs
crates/kuroya-app/src/buffer_close_lifecycle/: pending.rs
crates/kuroya-app/src/buffer_find/: replace.rs
crates/kuroya-app/src/command_editor_runtime/: selection.rs
crates/kuroya-app/src/command_palette_overlay/: results.rs
crates/kuroya-app/src/command_runtime/: file_workspace.rs
crates/kuroya-app/src/dashboard/: tests.rs
crates/kuroya-app/src/devtools_async_tasks/: details.rs
crates/kuroya-core/: Cargo.toml
crates/kuroya-core/src/: buffer.rs  command.rs  conflicts.rs  diagnostics.rs  git.rs  keymap.rs  lib.rs  lsp.rs  plugin.rs  project.rs  search.rs  settings.rs  syntax.rs  tasks.rs  text_match.rs  workspace_paths.rs
(+873 files in other folders)
