[package]
name = "kuroya-app"
version = "0.1.4"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "A fast native code editor for local workspaces"
build = "build.rs"

[[bin]]
name = "kuroya"
path = "src/main.rs"

[dependencies]
ab_glyph = "0.2"
anyhow.workspace = true
crossbeam-channel = "0.5"
eframe = { version = "=0.33.3", default-features = false, features = ["default_fonts", "wgpu", "x11", "wayland"] }
egui = "=0.33.3"
kuroya-core = { path = "../kuroya-core" }
fuzzy-matcher = "0.3"
image = { version = "0.25.10", default-features = false, features = ["bmp", "gif", "ico", "jpeg", "png", "tiff", "webp"] }
notify = "8.2"
portable-pty = "0.9"
rfd = { version = "0.17.2", features = ["common-controls-v6"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde.workspace = true
serde_json = "1.0"
syntect = { version = "5.3", default-features = false, features = ["default-fancy"] }
tokio = { version = "1.48", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
tree-sitter = "0.25"
tree-sitter-rust = "0.24.2"
vt100 = "0.16.2"
wasmi = { version = "0.46.0", default-features = false, features = ["std"] }
wgpu = { version = "27.0.1", default-features = false, features = ["std", "wgsl", "dx12", "vulkan", "metal", "gles"] }

[build-dependencies]
winresource = "0.1.31"

[package.metadata.cargo-machete]
ignored = ["winresource"]

[dev-dependencies]
wat = "1.252.0"
