[package]
name = "kuroya-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
git2 = "0.21"
globset = "0.4"
ignore = "0.4"
rayon = "1.11"
regex.workspace = true
ropey = "1.6.1"
serde.workspace = true
serde_json = "1.0"
toml = "0.9"
